force-app/main/default/objects/Contact/fields/Auto_create_Account_record__c.field-meta.xml
<CustomField>
    <fullName>Auto_create_Account_record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto create Account record</label>
    <type>Checkbox</type>
</CustomField>