force-app/main/default/objects/Contact/fields/ContactPerson__c.field-meta.xml
<CustomField>
    <fullName>ContactPerson__c</fullName>
    <label>Contact Person</label>
    <length>255</length>
    <type>Text</type>
</CustomField>