force-app/main/default/objects/Contact/fields/Dietary_Preferences__c.field-meta.xml
<CustomField>
    <fullName>Dietary_Preferences__c</fullName>
    <label>Dietary Preferences</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vegetarian</fullName>
            </value>
            <value>
                <fullName>Vegan</fullName>
            </value>
            <value>
                <fullName>Gluten-Free</fullName>
            </value>
            <value>
                <fullName>Halal</fullName>
            </value>
            <value>
                <fullName>Kosher</fullName>
            </value>
            <value>
                <fullName>Lactose-Free</fullName>
            </value>
            <value>
                <fullName>Nut Allergy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>