force-app/main/default/objects/Contact/fields/Event_Planning_Role__c.field-meta.xml
<CustomField>
    <fullName>Event_Planning_Role__c</fullName>
    <label>Event Planning Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary Contact</fullName>
            </value>
            <value>
                <fullName>Event Coordinator</fullName>
            </value>
            <value>
                <fullName>Finance Contact</fullName>
            </value>
            <value>
                <fullName>Operations Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>