force-app/main/default/objects/Contact/fields/HubSpot_Contact__c.field-meta.xml
<CustomField>
    <fullName>HubSpot_Contact__c</fullName>
    <label>HubSpot Contact</label>
    <length>50</length>
    <type>Text</type>
</CustomField>