force-app/main/default/objects/Contact/fields/Portal_User__c.field-meta.xml
<CustomField>
    <fullName>Portal_User__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if contact is an Experience Cloud user</description>
    <label>Portal User</label>
    <type>Checkbox</type>
</CustomField>