force-app/main/default/objects/Contact/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>VIP</fullName>
            </value>
            <value>
                <fullName>Regular</fullName>
            </value>
            <value>
                <fullName>New Client</fullName>
            </value>
            <value>
                <fullName>Blank</fullName>
                <isActive>false</isActive>
                <label>Blank</label>
            </value>
            <value>
                <fullName>Priority</fullName>
                <isActive>false</isActive>
                <label>Priority</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>