force-app/main/default/objects/Contact/fields/Quotient_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Quotient_Contact_Id__c</fullName>
    <label>Quotient Contact Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>