force-app/main/default/objects/Contact/fields/Quotient_Contact_Last_Modified_On__c.field-meta.xml
<CustomField>
    <fullName>Quotient_Contact_Last_Modified_On__c</fullName>
    <label>Quotient Contact Last Modified On</label>
    <type>DateTime</type>
</CustomField>