force-app/main/default/objects/Contact/fields/Quotient_Contact_Last_Synced_On__c.field-meta.xml
<CustomField>
    <fullName>Quotient_Contact_Last_Synced_On__c</fullName>
    <label>Quotient Contact Synced On</label>
    <type>DateTime</type>
</CustomField>