force-app/main/default/objects/Contact/fields/Quotient_Contact_URL__c.field-meta.xml
<CustomField>
    <fullName>Quotient_Contact_URL__c</fullName>
    <label>Quotient Contact URL</label>
    <type>Url</type>
</CustomField>