force-app/main/default/objects/Contact/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All done labels</fullName>
            </value>
            <value>
                <fullName>Testimonial Request</fullName>
            </value>
            <value>
                <fullName>OK</fullName>
            </value>
            <value>
                <fullName>Bad feedback</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>