force-app/main/default/objects/Contact/fields/Supplier_Category__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Category__c</fullName>
    <label>Supplier Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ice</fullName>
            </value>
            <value>
                <fullName>Event Supplies</fullName>
            </value>
            <value>
                <fullName>Food Supplies</fullName>
            </value>
            <value>
                <fullName>Drinks Supplies</fullName>
            </value>
            <value>
                <fullName>Caterers</fullName>
            </value>
            <value>
                <fullName>Uniforms</fullName>
            </value>
            <value>
                <fullName>Coffee</fullName>
            </value>
            <value>
                <fullName>Bar Equipment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>