force-app/main/default/objects/Contact/fields/Supply__c.field-meta.xml
<CustomField>
    <fullName>Supply__c</fullName>
    <label>Supply</label>
    <length>255</length>
    <type>Text</type>
</CustomField>