force-app/main/default/objects/Contact/fields/Synced_with_Quotient__c.field-meta.xml
<CustomField>
    <fullName>Synced_with_Quotient__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Synced with Quotient?</label>
    <type>Checkbox</type>
</CustomField>