force-app/main/default/objects/Contact/fields/Text_1__c.field-meta.xml
<CustomField>
    <fullName>Text_1__c</fullName>
    <label>Text 1</label>
    <type>TextArea</type>
</CustomField>