force-app/main/default/objects/Contact/recordTypes/Contacts.recordType-meta.xml
<RecordType>
    <fullName>Contacts</fullName>
    <active>true</active>
    <label>Contacts</label>
</RecordType>