force-app/main/default/objects/Contact/recordTypes/Contacts_Events.recordType-meta.xml
<RecordType>
    <fullName>Contacts_Events</fullName>
    <active>true</active>
    <label>Contacts-Events</label>
</RecordType>