force-app/main/default/objects/Contact/recordTypes/MH_Clients_DataBase.recordType-meta.xml
<RecordType>
    <fullName>MH_Clients_DataBase</fullName>
    <active>true</active>
    <label>MH Clients DataBase</label>
</RecordType>