force-app/main/default/objects/Contact/recordTypes/Suppliers.recordType-meta.xml
<RecordType>
    <fullName>Suppliers</fullName>
    <active>true</active>
    <label>Suppliers</label>
</RecordType>