force-app/main/default/objects/Contact/validationRules/Australian_Phone_Format_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Australian_Phone_Format_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Phone)),
    NOT(
        AND(
            /* Allowed characters: + digits spaces dashes brackets */
            REGEX(
                Phone,
                &quot;^[+0-9()\\-\\s]+$&quot;
            ),

            /* After removing + spaces dashes brackets → must be 8–15 digits */
            REGEX(
                SUBSTITUTE(
                    SUBSTITUTE(
                        SUBSTITUTE(
                            SUBSTITUTE(
                                SUBSTITUTE(
                                    Phone,
                                    &quot;+&quot;, &quot;&quot;
                                ),
                                &quot; &quot;, &quot;&quot;
                            ),
                            &quot;-&quot;, &quot;&quot;
                        ),
                        &quot;(&quot;, &quot;&quot;
                    ),
                    &quot;)&quot;, &quot;&quot;
                ),
                &quot;^[0-9]{8,15}$&quot;
            )
        )
    )
)</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Invalid phone number format. Only digits, +, spaces, dashes (-), and brackets ( ) are allowed. 
Phone number must contain 8 to 15 digits.</errorMessage>
</ValidationRule>