force-app/main/default/objects/Contact/validationRules/First_Name_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>First_Name_is_required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(FirstName)</errorConditionFormula>
    <errorDisplayField>FirstName</errorDisplayField>
    <errorMessage>First Name is required</errorMessage>
</ValidationRule>