force-app/main/default/objects/Contact/listViews/All_Contacts_Events.listView-meta.xml
<ListView>
    <fullName>All_Contacts_Events</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Contacts_Events</value>
    </filters>
    <label>All Contacts-Events</label>
</ListView>