force-app/main/default/objects/Contact/listViews/All_Contacts_Hubspot.listView-meta.xml
<ListView>
    <fullName>All_Contacts_Hubspot</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Record_Type__c</field>
        <operation>equals</operation>
        <value>Contacts</value>
    </filters>
    <label>All Contacts - Hubspot</label>
</ListView>