force-app/main/default/objects/Contact/listViews/All_Suppliers.listView-meta.xml
<ListView>
    <fullName>All_Suppliers</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Suppliers</value>
    </filters>
    <label>All Suppliers</label>
</ListView>