force-app/main/default/objects/Contact/listViews/MH_Clients_DataBase_Contacts.listView-meta.xml
<ListView>
    <fullName>MH_Clients_DataBase_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.MH_Clients_DataBase</value>
    </filters>
    <label>All MH Clients DataBase Contacts</label>
</ListView>